--- a/index.html
+++ b/index.html
@@ -5,11 +5,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>DCox Bootcamp Portfolio</title>
+    <link href="assets/css/style..css" rel="stylesheet" type="text/css">
 </head>
+<!-- HEADER BEGINS. CONTAINS NAME AND NAVIGATION -->
+<div class="headerWrapper">
+    <div class="headerName">
+        <h1>David Cox</h1>
+    </div>
+    <div class="headerLinks">
+        <div>
+            <a href="index.html">About | </a>
+            <a href="portfolio.html">Portfolio | </a>
+            <a href="contact.html">Contact</a>
+        </div>
+    </div>
+    <div class="headerSpace">
+        <section></section>
+    </div>
+    <!-- END HEADER -->
+    <div class="container">
+        <section id="main-bio">
+            <div class="imageWrapper">
+                <h2>My Story</h2>
+                <hr>
+                <img src="assets/images/Davehdrawing.jpg" alt="Name" id="bio-image">
+            </div>
 
-<body>
+            <p>Began coding in 1994 as a flash developer. Submerged me in the coding culture and learned the trade
+                while working in the
+                industry. Started working as a freelance web developer in 1997 to the present. Started Daventertainment
+                Inc
+                in 2009. Incorporated in 2016.</p>
 
-</body>
+            <p> Technologies I enjoy are HTML5, CSS3, PHP, JQuery, Javascript, Adobe Suites, Wordpress, MySQL,
+                Postgres,
+                Audio and Video Editing.
+                Sound Design. Strong design and database professional attended Orange Coast College.
+                An enthusiastic Web developer with a demonstrated history of ability and eagerness to learn.
+                A team player with leadership skills. I love what I do in an industry I love. Currently under contract
+                with Worldwide Express
+                as a junior fullstack developer. Currently updating Full Stack knowledge and skill set by joining a
+                coding boot camp.
+                Oct 16, 2018, at
+                UC Irvine. Code 2 Create. Programming 4 Progress.</p>
+
+            <p>On weekends you can find me spinning an eclectic variety of musical jams onboard luxury
+                party yachts in Newport Beach and Marina Del Rey for Hornblower Cruises and Events. For more info go
+                to reservations at
+                <a href="https://www.hornblower.com/home/nb" target="_blank">Hornblower.com</a></p>
+
+        </section>
+        <section id="contact-info">
+            <div class="info">
+                <h2>Contact Info</h2>
+                <ul>
+                    <li><strong>Email:</strong> <a href="#">someemail@gmail.com</a></li>
+                    <li><strong>Github</strong> someName</li>
+                    <li><strong>Portfolio</strong> <a href="#">coming soon</a></li>
+                </ul>
+            </div>
+            <hr>
+            <div class="info">
+                <h2>Orange County</h2>
+
+                <ul>
+                    <li><strong>Phone:</strong> <a href="#">(714)444-4444</a></li>
+                    <li><strong>Location:</strong>Orange County, Ca</li>
+
+                </ul>
+            </div>
+            <hr>
+            <div class="info">
+                <h2>Los Angeles</h2>
+
+                <ul>
+                    <li><strong>Phone:</strong> <a href="#">(888)888-8888</a></li>
+                    <li><strong>Location:</strong>Redondo Beach, Ca</li>
+
+                </ul>
+            </div>
+        </section>
+    </div>
+    <!-- FOOTER -->
+    <div class="footer">
+        © - Copyright 2018 DCox
+    </div>
+    <!-- END FOOTER -->
+    </body>
 
 </html>
