--- a/portfolio.html
+++ b/portfolio.html
@@ -5,14 +5,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>DCox Bootcamp Portfolio</title>
+    <link href="assets/css/style..css" rel="stylesheet" type="text/css">
 </head>
+<!-- HEADER BEGINS. CONTAINS NAME AND NAVIGATION -->
+<div class="headerWrapper">
+    <div class="headerName">
+        <h1>David Cox</h1>
+    </div>
+    <div class="headerLinks">
+        <div>
+            <a href="index.html">About | </a>
+            <a href="portfolio.html">Portfolio | </a>
+            <a href="contact.html">Contact</a>
+        </div>
+    </div>
+    <div class="headerSpace">
+        <section></section>
+    </div>
+    <!-- END HEADER -->
+    <div class="container">
+        <section id="main-bio">
 
-<body>
-    <header></header>
+            <h2>My Work</h2>
+            <hr>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <a href="#"><img src="assets/images/Hangman-Game.Png" width="180px" height="180px"></a>
+                    <h3 class="portfolio_name">Hangman</h3>
+                </div>
+                <div class="grid-item">
+                    <a href="#"><img src="assets/images/rpgimage.png" width="180px" height="180px"></a>
+                    <h3 class="portfolio_name">RPG Game</h3>
+                </div>
+                <div class="grid-item">
+                    <a href="#"><img src="assets/images/trivia.png" width="180px" height="180px"></a>
+                    <h3 class="portfolio_name">Trivia Game</h3>
+                </div>
+                <div class="grid-item">
+                    <a href="#"><img src="assets/images/roshambo.jpg.png" width="180px" height="180px"></a>
+                    <h3 class="portfolio_name">Ro Sham Bo</h3>
+                </div>
+                <div class="grid-item">
+                    <a href="#"><img src="assets/images/rutgers.png" width="180px" height="180px"></a>
+                    <h3 class="portfolio_name">Rutgers Widget</h3>
+                </div>
+                <div class="grid-item">
+                    <a href="#"><img src="assets/images/GoogleMap.png" width="180px" height="180px"></a>
+                    <h3 class="portfolio_name">Google API</h3>
+                </div>
+                <div class="grid-item">
+                    <a href="#"><img src="assets/images/question-mark.png" width="180px" height="180px"></a>
+                    <h3 class="portfolio_name">Another Widget</h3>
+                </div>
+            </div>
+        </section>
+        <section id="contact-info">
+            <div class="info">
+                <h2>Contact Info</h2>
+                <ul>
+                    <li><strong>Email:</strong> <a href="#">someemail@gmail.com</a></li>
+                    <li><strong>Github</strong> someName</li>
+                    <li><strong>Portfolio</strong> <a href="#">coming soon</a></li>
+                </ul>
+            </div>
+            <hr>
+            <div class="info">
+                <h2>Orange County</h2>
 
-    <footer></footer>
+                <ul>
+                    <li><strong>Phone:</strong> <a href="#">(714)444-4444</a></li>
+                    <li><strong>Location:</strong>Orange County, Ca</li>
 
-</body>
+                </ul>
+            </div>
+            <hr>
+            <div class="info">
+                <h2>Los Angeles</h2>
+
+                <ul>
+                    <li><strong>Phone:</strong> <a href="#">(888)888-8888</a></li>
+                    <li><strong>Location:</strong>Redondo Beach, Ca</li>
+
+                </ul>
+            </div>
+        </section>
+    </div>
+    <!-- FOOTER -->
+    <div class="footer">
+        © - Copyright 2018 DCox
+    </div>
+    <!-- END FOOTER -->
+    </body>
 
 </html>
