--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>DCox Bootcamp Portfolio</title>
+    <link href="assets/css/style..css" rel="stylesheet" type="text/css">
 </head>
+<!-- HEADER BEGINS. CONTAINS NAME AND NAVIGATION -->
+<div class="headerWrapper">
+    <div class="headerName">
+        <h1>David Cox</h1>
+    </div>
+    <div class="headerLinks">
+        <div>
+            <a href="index.html">About | </a>
+            <a href="portfolio.html">Portfolio | </a>
+            <a href="contact.html">Contact</a>
+        </div>
+    </div>
+    <div class="headerSpace">
+        <section></section>
+    </div>
+    <!-- END HEADER -->
+    <div class="container">
+        <section id="main-bio">
+            Content Here
 
-<body>
+        </section>
+        <section id="contact-info">
+            <div class="info">
+                <h2>Contact Info</h2>
+                <ul>
+                    <li><strong>Email:</strong> <a href="#">someemail@gmail.com</a></li>
+                    <li><strong>Github</strong> someName</li>
+                    <li><strong>Portfolio</strong> <a href="#">coming soon</a></li>
+                </ul>
+            </div>
+            <hr>
+            <div class="info">
+                <h2>Orange County</h2>
 
-</body>
+                <ul>
+                    <li><strong>Phone:</strong> <a href="#">(714)444-4444</a></li>
+                    <li><strong>Location:</strong>Orange County, Ca</li>
+
+                </ul>
+            </div>
+            <hr>
+            <div class="info">
+                <h2>Los Angeles</h2>
+
+                <ul>
+                    <li><strong>Phone:</strong> <a href="#">(888)888-8888</a></li>
+                    <li><strong>Location:</strong>Redondo Beach, Ca</li>
+
+                </ul>
+            </div>
+        </section>
+    </div>
+    <!-- FOOTER -->
+    <div class="footer">
+        © - Copyright 2018 DCox
+    </div>
+    <!-- END FOOTER -->
+    </body>
 
 </html>
