--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DCox Bootcamp Portfolio</title>
     <link href="assets/css/style..css" rel="stylesheet" type="text/css">
+    <link href="assets/css/form.css" rel="stylesheet" type="text/css">
 </head>
 <!-- HEADER BEGINS. CONTAINS NAME AND NAVIGATION -->
 <div class="headerWrapper">
@@ -26,12 +27,34 @@
     <!-- END HEADER -->
     <div class="container">
         <section id="main-bio">
-            Content Here
+            <h2>Contact Me</h2>
+            <hr>
+            <form action="action_page.php">
+
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+                <label for="country">Country</label>
+                <select id="country" name="country">
+                    <option value="canada">USA</option>
+                    <option value="usa">Canada</option>
+                </select>
+
+                <label for="subject">Subject</label>
+                <textarea id="subject" name="subject" placeholder="Write something.." style="height:120px"></textarea>
+
+                <input type="submit" value="Submit">
+
+            </form>
+
 
         </section>
         <section id="contact-info">
             <div class="info">
-                <h2>Contact Info</h2>
+                <h2>Connect</h2>
                 <ul>
                     <li><strong>Email:</strong> <a href="#">someemail@gmail.com</a></li>
                     <li><strong>Github</strong> someName</li>
