--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         </section>
         <section id="contact-info">
             <div class="info">
-                <h2>Contact Info</h2>
+                <h2>Connect</h2>
                 <ul>
                     <li><strong>Email:</strong> <a href="#">someemail@gmail.com</a></li>
                     <li><strong>Github</strong> someName</li>
