--- a/contact2.html
+++ b/contact2.html
@@ -40,7 +40,7 @@
                 <label for="email">Email</label>
                 <input type="text" id="email" name="email" placeholder="Your email..">
                 <label for="subject">Subject</label>
-                <textarea id="subject" name="subject" placeholder="Write something.." style="height:116px"></textarea>
+                <textarea id="subject" name="subject" placeholder="Write something.." style="height:158px"></textarea>
 
                 <input type="submit" value="Submit">
 
@@ -50,11 +50,11 @@
         </section>
         <section id="contact-info">
             <div class="info">
-                <h2>My Conexiones</h2>
+                <h2>Connections</h2>
                 <div class="icons">
-                    <a href="#"><img class="icon-btn" src="assets/images/github2.jpg.png" width="71px" height="71px"></a>
-                    <a href="#"><img class="icon-btn" src="assets/images/linkdin2.png" width="70px" height="70px"></a>
-                    <a href="#"><img class="icon-btn" src="assets/images/stackoverflow2.png" width="70px" height="70px"></a>
+                    <div><a href="#"><img class="icon-btn" src="assets/images/github2.jpg.png" width="70px" height="70px"></a></div>
+                    <div><a href="#"><img class="icon-btn" src="assets/images/linkdin2.png" width="70px" height="70px"></a></div>
+                    <div><a href="#"><img src="assets/images/stackoverflow2.png" width="70px" height="70px"></a></div>
                 </div>
             </div>
             <hr>
@@ -64,6 +64,7 @@
                 <ul>
                     <li><strong>Phone:</strong> <a href="#">(714)444-4444</a></li>
                     <li><strong>Location:</strong>Orange County, Ca</li>
+                    <li><strong>Email:</strong>davedvst@gmail.com</li>
 
                 </ul>
             </div>
@@ -74,7 +75,7 @@
                 <ul>
                     <li><strong>Phone:</strong> <a href="#">(888)888-8888</a></li>
                     <li><strong>Location:</strong>Redondo Beach, Ca</li>
-
+                    <li><strong>Email:</strong>davedvst@gmail.com</li>
                 </ul>
             </div>
         </section>
