--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
         </section>
         <section id="contact-info">
             <div class="info">
-                <h2>Connect</h2>
-                <ul>
-                    <li><strong>Email:</strong> <a href="#">someemail@gmail.com</a></li>
-                    <li><strong>Github</strong> someName</li>
-                    <li><strong>Portfolio</strong> <a href="#">coming soon</a></li>
-                </ul>
+                <h2>My Conexiones</h2>
+                <div class="icons">
+                    <a href="#"><img class="icon-btn" src="assets/images/github2.jpg.png" width="71px" height="71px"></a>
+                    <a href="#"><img class="icon-btn" src="assets/images/linkdin2.png" width="70px" height="70px"></a>
+                    <a href="#"><img class="icon-btn" src="assets/images/stackoverflow2.png" width="70px" height="70px"></a>
+                </div>
             </div>
             <hr>
             <div class="info">
