commented code in html

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--PORTFOLIO CONTACT PAGE -->
 
 <head>
     <meta charset="UTF-8">
@@ -25,7 +26,9 @@
         <section></section>
     </div>
     <!-- END HEADER -->
+    <!--BEGIN MAIN CONTAINER 960PX WIDE -->
     <div class="container">
+        <!--BEGIN MAIN BIO CONTAINS CONTACT FORM -->
         <section id="main-bio">
             <h2>Contact Me</h2>
             <hr>
@@ -48,6 +51,8 @@
 
 
         </section>
+        <!--END MAIN BIO CONTACT FORM -->
+        <!--BEGIN MY CONEXIONES SIDE BAR -->
         <section id="contact-info">
             <div class="info">
                 <h2>My Conexiones</h2>
@@ -78,7 +83,9 @@
                 </ul>
             </div>
         </section>
+        <!--END MY CONEXIONES SIDE BAR -->
     </div>
+    <!--ENB MAIN CONTAINER 960PX WIDE -->
     <!-- FOOTER -->
     <div class="footer">
         © - Copyright 2018 DCox
