--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--PORTFILIO INDEX PAGE -->
 
 <head>
     <meta charset="UTF-8">
@@ -24,7 +25,9 @@
         <section></section>
     </div>
     <!-- END HEADER -->
+    <!--BEGIN MAIN CONTAINER 960PX WIDE -->
     <div class="container">
+        <!--BEGIN MAIN BIO HOLDS MY STORY CONTENT -->
         <section id="main-bio">
             <div class="imageWrapper">
                 <h2>My Story</h2>
@@ -41,14 +44,16 @@
             <p> Technologies I enjoy are HTML5, CSS3, PHP, JQuery, Javascript, Adobe Suites, Wordpress, MySQL,
                 Postgres,
                 Audio and Video Editing.
-                Sound Design. Strong design and database professional attended Orange Coast College.
+                Sound Design. Strong design and database professional. Attended Orange Coast college to study music and
+                found programming through synthesizers.
                 An enthusiastic Web developer with a demonstrated history of ability and eagerness to learn.
-                A team player with leadership skills. I love what I do in an industry I love. Currently under contract
+                A team player with leadership skills. I love what I do in an industry I that has endless potential.
+                Currently under contract
                 with Worldwide Express
-                as a junior full stack developer. Currently updating Full Stack knowledge and skill set by joining a
-                coding boot camp.
-                Oct 16, 2018, at
-                UC Irvine. Code 2 Create. Programming 4 Progress.</p>
+                as a Junior Full-Stack developer. Currently updating Full-Stack skill set and getting certification by
+                currently attending a
+                UC Irvine coding boot camp Oct 16, 2018 - April 27, 2019.
+                Code 2 Create. Programming 4 Progress.</p>
 
             <p>On weekends you can find me spinning an eclectic variety of musical jams onboard luxury
                 party yachts in Newport Beach and Marina Del Rey for Hornblower Cruises and Events. For more info go
@@ -56,6 +61,8 @@
                 <a href="https://www.hornblower.com/home/nb" target="_blank">Hornblower.com</a></p>
 
         </section>
+        <!--END MAIN BIO MY STORY CONTENT -->
+        <!--BEGIN MY CONEXIONES SIDE BAR -->
         <section id="contact-info">
             <div class="info">
                 <h2>My Conexiones</h2>
@@ -86,7 +93,9 @@
                 </ul>
             </div>
         </section>
+        <!--END MY CONEXIONES SIDE BAR -->
     </div>
+    <!--END MAIN CONTAINER 960PX WIDE -->
     <!-- FOOTER -->
     <div class="footer">
         © - Copyright 2018 DCox
