--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--PORTFOLIO WORK PAGE -->
 
 <head>
     <meta charset="UTF-8">
@@ -24,9 +25,10 @@
         <section></section>
     </div>
     <!-- END HEADER -->
+    <!--BEGIN MAIN CONTAINER 960PX WIDE -->
     <div class="container">
+        <!--BEGIN MAIN BIO MY WORK CONTENT  -->
         <section id="main-bio">
-
             <h2>My Work</h2>
             <hr>
             <div class="grid-container">
@@ -60,6 +62,8 @@
                 </div>
             </div>
         </section>
+        <!--END MAIN BIO MY WORK CONTENT -->
+        <!--BEGIN MY CONEXIONES SIDE BAR -->
         <section id="contact-info">
             <div class="info">
                 <h2>My Conexiones</h2>
@@ -90,7 +94,10 @@
                 </ul>
             </div>
         </section>
+        <!--END MY CONEXIONES SIDE BAR -->
+        <!--END MAIN BIO MY WORK CONTENT -->
     </div>
+    <!--END MAIN CONTAINER 960PX WIDE-->
     <!-- FOOTER -->
     <div class="footer">
         © - Copyright 2018 DCox
