--- a/portfolio.html
+++ b/portfolio.html
@@ -68,9 +68,12 @@
             <div class="info">
                 <h2>My Conexiones</h2>
                 <div class="icons">
-                    <a href="#"><img class="icon-btn" src="assets/images/github2.jpg.png" width="71px" height="71px"></a>
-                    <a href="#"><img class="icon-btn" src="assets/images/linkdin2.png" width="70px" height="70px"></a>
-                    <a href="#"><img class="icon-btn" src="assets/images/stackoverflow2.png" width="70px" height="70px"></a>
+                    <a href="https://github.com/Dcoxmen" target="_blank"><img class="icon-btn" src="assets/images/github2.jpg.png"
+                            width="71px" height="71px"></a>
+                    <a href="https://www.linkedin.com/in/david-cox-78b88b44/" target="_blank"><img class="icon-btn" src="assets/images/linkdin2.png"
+                            width="70px" height="70px"></a>
+                    <a href="https://stackoverflow.com/users/10243984/codecox" target="_blank"><img class="icon-btn"
+                            src="assets/images/stackoverflow2.png" width="70px" height="70px"></a>
                 </div>
             </div>
             <hr>
