refactored css to style.css

--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
                 Inc
                 in 2009. Incorporated in 2016.</p>
 
-            <p> Technologies I enjoy are HTML5, CSS3, PHP, JQuery, Javascript, Adobe Suites, Wordpress, MySQL,
+            <p> Technologies I enjoy are HTML5, CSS3, PHP, JQuery, Javascript, Adobe Suites, Git and gitbash, MySQL,
                 Postgres,
-                Audio and Video Editing.
-                Sound Design. Strong design and database professional. Attended Orange Coast college to study music and
+                Audio, Video Editing and
+                Sound Design. Specialty in strong clean design and database integration. Attended Orange Coast college
+                to study
+                music and
                 found programming through synthesizers.
                 An enthusiastic Web developer with a demonstrated history of ability and eagerness to learn.
-                A team player with leadership skills. I love what I do in an industry I that has endless potential.
+                A team player with leadership skills. I love what I do in an industry that has endless potential.
                 Currently under contract
                 with Worldwide Express
                 as a Junior Full-Stack developer. Currently updating Full-Stack skill set and getting certification by
