latest update wk2

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 Currently under contract
                 with Worldwide Express
                 as a Junior Full-Stack developer. Currently updating Full-Stack skill set and getting certification by
-                currently attending a
+                attending a
                 UC Irvine coding boot camp Oct 16, 2018 - April 27, 2019.
                 Code 2 Create. Programming 4 Progress.</p>
 
