index page changes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         </section>
         <!--END MAIN BIO MY STORY CONTENT -->
-        <!--BEGIN MY CONEXIONES SIDE BAR -->
+        <!--BEGIN MY CONEXIONES SIDE BAR LINKS  -->
         <section id="contact-info">
             <div class="info">
                 <h2>My Conexiones</h2>
