fixed broken div tag

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="headerSpace">
         <section></section>
     </div>
+</div>
     <!-- END HEADER -->
     <!--BEGIN MAIN CONTAINER 960PX WIDE -->
     <div class="container">
