--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 while working in the
                 industry. Started working as a freelance web developer in 1997 to the present. Started Daventertainment
                 Inc
-                in 2009. Incorporated in 2016.</p>
+                in 2009. Incorporating in 2016.</p>
 
             <p> Technologies I enjoy are HTML5, CSS3, PHP, JQuery, Javascript, Adobe Suites, Git and gitbash, MySQL,
                 Postgres,
